--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,15 @@
     <groupId>org.example</groupId>
     <artifactId>JavaConcurrency</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency> <!-- for servlet example -->
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
+    <packaging>war</packaging><!-- for servlet example -->
 
 
 </project>
